tests/baselines/reference/parser509546_1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parser509546_1.ts (1 errors) ====
    export class Logger { 
                 ~~~~~~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
         public
    }
    